implementação da documentação de Recebimento de Encomenda
